@@ -24,7 +24,7 @@ ARTIFACT_NAME               = lsp-plugins-trigger
 ARTIFACT_TYPE               = plug
 ARTIFACT_DESC               = LSP Trigger Plugin Series
 ARTIFACT_HEADERS            = lsp-plug.in
-ARTIFACT_VERSION            = 1.0.5
+ARTIFACT_VERSION            = 1.0.5-devel
 
 
 
