@@ -4,6 +4,7 @@
 
 === 1.0.5 ===
 * Added german translations (contributed by Johannes Guenther).
+* Added pitch control for the sample.
 * Updated build scripts and dependencies.
 
 === 1.0.4 ===
